Retirando información del Estacionamiento

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!------------------------------------------------->
   <title>Hotel Punto MX - El punto más cómodo de México</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Si viajas a la ciudad de México hospedate en Hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
+  <meta name="description" content="Reserva directamente y obtén descuentos exclusivos con la tarifa más baja."/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
   <meta name="robots" content="index,follow"/>
@@ -88,6 +88,7 @@
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<p style="display: none;">Reserva directamente y obtén descuentos exclusivos con la tarifa más baja.</p>
 <!-- End Google Tag Manager (noscript) -->
 <!------ modals ------->
 <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -741,9 +742,9 @@
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="cafemx-tab" data-toggle="pill" href="#cafemx" role="tab" aria-controls="pills-profile" aria-selected="false"><i class="fa-solid fa-mug-hot icon" style="line-height: unset;"></i></a>
             </li>
-            <li class="nav-item" role="presentation">
+            <!--<li class="nav-item" role="presentation">
               <a class="nav-link" id="parking-tab" data-toggle="pill" href="#parking" role="tab" aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-car-side icon" style="line-height: unset"></i></a>
-            </li>
+            </li>-->
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="pet-tab" data-toggle="pill" href="#pet" role="tab" aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-paw icon" style="line-height: unset;"></i></a>
             </li>
@@ -976,7 +977,7 @@
                 <ul class="link">
                   <li><a href="restaurant.html">Resturant MX</a></li>
                   <li><a href="cafe.html">Café MX</a></li>
-                  <li><a href="index.html#parking-tab">Estacionamiento</a></li>
+                  <!--<li><a href="index.html#parking-tab">Estacionamiento</a></li>-->
                   <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                 </ul>
               </div>
