--- a/ng/index.html
+++ b/ng/index.html
@@ -734,11 +734,11 @@
                                aria-controls="pills-profile" aria-selected="false"><i class="fa-solid fa-mug-hot icon"
                                                                                       style="line-height: unset;"></i></a>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <!--<li class="nav-item" role="presentation">
                             <a class="nav-link" id="parking-tab" data-toggle="pill" href="#parking" role="tab"
                                aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-car-side icon"
                                                                                       style="line-height: unset"></i></a>
-                        </li>
+                        </li>-->
                         <li class="nav-item" role="presentation">
                             <a class="nav-link" id="pet-tab" data-toggle="pill" href="#pet" role="tab"
                                aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-paw icon"
@@ -1022,7 +1022,7 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <li><a href="index.html#parking-tab">Parking</a></li>
+                                    <!--<li><a href="index.html#parking-tab">Parking</a></li>-->
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
