--- a/restaurant2.html
+++ b/restaurant2.html
@@ -511,7 +511,7 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <li><a href="index.html#parking-tab">Estacionamiento</a></li>
+                                    <!--<li><a href="index.html#parking-tab">Estacionamiento</a></li>-->
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
