--- a/ng/contact.html
+++ b/ng/contact.html
@@ -678,7 +678,7 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <li><a href="index.html#parking-tab">Parking</a></li>
+                                    <!--<li><a href="index.html#parking-tab">Parking</a></li>-->
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
