Actualización de firmas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!------------------------------------------------->
   <title>Hotel Punto MX - El punto más cómodo de México</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Reserva directamente y obtén descuentos exclusivos con la tarifa más baja."/>
+  <meta name="description" content="Reserva directamente y obtén descuentos exclusivos con la tarifa más baja. Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX."/>
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES, MÉXICO, CONOCE A MÉXICO"/>
   <meta name="author" content="EKNR" />
   <meta name="robots" content="index,follow"/>
@@ -17,15 +17,12 @@
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
   <meta property="og:site_name" content="Hoteles Punto MX - El punto más cómodo de México"/>
-  <meta property="og:description" content="Si viajas a la ciudad de México hospedate en Hotel Punto MX en el centro de la CDMX, reserva directamente en nuestro sitio web y aprovecha la tarifa preferencial y disfruta de nuestros servicio de hospedaje"/>
+  <meta property="og:description" content="Reserva directamente y obtén descuentos exclusivos con la tarifa más baja. Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, déjate consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir la mejor experiencia hospitalaria. Contamos con 60 lujosas y cómodas habitaciones; cada una de ellas con un toque especial. Ya sea que tu viaje sea familiar, de amigos o negocios, PUNTO MX es un lugar maravilloso para hacer de tu experiencia en México algo único."/>
   <meta name="twitter:title" content="Hotel Punto MX - El punto más cómodo de México" />
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
-  <!------------------------------------------------->
-  <!------------------------------------------------->
-  <!--<link rel="icon" href="assets/logos/HPMx.png">-->
   <!------------------------------------------------->
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -88,7 +85,6 @@
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<p style="display: none;">Reserva directamente y obtén descuentos exclusivos con la tarifa más baja.</p>
 <!-- End Google Tag Manager (noscript) -->
 <!------ modals ------->
 <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -436,7 +432,7 @@
                       Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, déjate consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir la mejor experiencia hospitalaria. Contamos con 60 lujosas y cómodas habitaciones; cada una de ellas con un toque especial. Ya sea que tu viaje sea familiar, de amigos o negocios, PUNTO MX es un lugar maravilloso para hacer de tu experiencia en México algo único.
                     </small>
                     <ul class="banner_well" style="">
-                      <li><i class="fa-solid fa-drumstick-bite" style="color:#FFF!important"></i><small>Desayuno Buffete</small></li>
+                      <li><i class="fa-solid fa-drumstick-bite" style="color:#FFF!important"></i><small>Desayuno Buffete <br>L-V 06:00 a 10:00 am<br> S-D 07:00 a 12:00 pm</small><br><small></small></li>
                       <li><i class="fa-solid fa-bed" style="color:#FFF!important"></i><small>Upgrade gratis</small></li>
                       <li><i class="fa-solid fa-hand-holding-dollar" style="color:#FFF!important"></i><small>Mejor precio</small></li>
                     </ul>
