--- a/restaurant.html
+++ b/restaurant.html
@@ -6,8 +6,8 @@
     <title>Restaurante MX - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
-    <meta name="description"
-          content="Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días."/>
+    <meta name="description" content="Encuentra valores agregados, cuponera con descuentos, coctel de bienvenida. Además, pagando en efectivo recibe descuentos adicionales en tu tarifa. Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet."/>
+    <!--<meta name="description" content="Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días."/>-->
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
