--- a/rooms.html
+++ b/rooms.html
@@ -6,49 +6,16 @@
     <title>Habitaciones - Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logos/HPMx.png" type="image/x-icon">
-    <meta name="description"
-          content="Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México."/>
+    <meta name="description" content="Reserva online tu próximo hospedaje con precios bajos seguros y valores agregados. Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México."/>
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA, VACACIONES MÉXICO, VISITA MÉXICO"/>
     <meta name="author" content="eknr"/>
     <meta name="robots" content="index,follow"/>
-    <!--Completado-->
-    <!------------------------------------------------->
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
-    <!-- End Google Tag Manager -->
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'G-BWCT951Z6Z');
-    </script>
-    <!------------------------------------------------->
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Hotel Punto MX - Conoce nuestras habitaciones"/>
     <meta property="og:image" content=""/>
     <meta property="og:url" content="hotelpuntomx.com"/>
     <meta property="og:site_name" content="Hotel Punto MX"/>
-    <meta property="og:description"
-          content="Todas nuestras habitaciones están decoradas con un estilo moderno y elegante. Incluyen comodidades como Wi-Fi gratuito y Smart TV y cafeteras, para proporcionar la mejor comodidad y descanso en el Centro Histórico de la Ciudad de México."/>
+    <meta property="og:description" content="Reserva online tu próximo hospedaje con precios bajos seguros y valores agregados. Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México."/>
     <meta name="twitter:title" content="Hotel Punto MX - Conoce nuestras habitaciones"/>
     <meta name="twitter:image" content=""/>
     <meta name="twitter:url" content=""/>
@@ -82,6 +49,37 @@
             font-size: 2.5rem !important;
         }
     </style>
+       <!--Completado-->
+    <!------------------------------------------------->
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WJG6GSM9');</script>
+    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWCT951Z6Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWCT951Z6Z');
+    </script>
+    <!------------------------------------------------->
 </head>
 <body class="mybody">
 <!-- Google Tag Manager (noscript) -->
