--- a/tours.html
+++ b/tours.html
@@ -56,7 +56,7 @@
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
     <link rel="stylesheet" href="css/superfish.css">
-    <!--<link rel="stylesheet" href="css/bootstrap-datepicker.min.css">-->
+    <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="css/cs-select.css">
     <link rel="stylesheet" href="css/cs-skin-border.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -74,16 +74,13 @@
             height: 95vh !important;
         }
 
-        @media screen and (max-width: 991px) {
+        @media screen and (max-width: 990px) {
             .window_size {
                 height: 95vh !important;
             }
-            .mdp_img {
-            width: 60%!important;
-        }
         }
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 758px) {
             .window_size {
                 height: 85vh !important;
             }
@@ -91,22 +88,12 @@
             .contact_form li {
                 padding-left: 20px !important;
             }
-            .mdp_img {
-            width: 55%!important;
-        }
-        .container{
-            max-width: 750px;
-        }
         }
 
         @media screen and (max-width: 580px) {
             .window_size {
-                height: 80vh !important;
+                height: 50vh !important;
             }
-
-            .mdp_img {
-            width: 65%!important;
-        }
         }
 
         input[type=number]::-webkit-inner-spin-button,
@@ -121,8 +108,7 @@
 
         .mdp_img {
             max-height: 50% !important;
-            width: 50%;
-            margin-top: 30px;
+            width: 80%;
         }
 
         .contact_form input {
@@ -433,47 +419,45 @@
                         -->
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-coyoacan.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/01t.webp"
                                      alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-grutas.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/02t.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-luchalibre.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/03t.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-piramides.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/04t.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-puebla.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/05t.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-taxco.webp"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/06t.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/t-teotihuacan.webp"
-                                     alt="Third slide">
-                            </div>
-                            <!--
-                            <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/tour_ocho.png"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/07t.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/tour_nueve.png"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/08t.webp"
+                                     alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/09t.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="./images/tours/tour_diez.png"
+                                <img class="d-block mx-auto mdp_img" src="./images/2024/tours/esp/10t.webp"
                                      alt="Third slide">
                             </div>
-                        -->
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
                            data-slide="prev">
@@ -562,13 +546,13 @@
                                 <select name="tour" class="borde_r" id="tour_tour" required>
                                     <option value="Piramides de Teotihuacán">Piramides de Teotihuacán</option>
                                     <option value="Teotihuacán aéreo">Teotihuacán aéreo</option>
-                                    <!--<option value="Teotihuacán Express">Teotihuacán Express</option>-->
-                                    <option value="Xochimilco-Coyoacán">Coyoacán + Xochimilco</option>
-                                    <option value="Cholula-Puebla">Cholula, Puebla</option>
-                                    <option value="Taxco-Cuernavaca">Taxco + Cuernavaca</option>
-                                    <!--<option value="Garibaldi Nocturno">Garibaldi Nocturno</option>-->
-                                    <option value="Tour Luchas">Lucha libre</option>
-                                    <!--<option value="Piramides y Safari">Piramides y Safari</option>-->
+                                    <option value="Teotihuacán Express">Teotihuacán Express</option>
+                                    <option value="Xochimilco-Coyoacán">Xochimilco-Coyoacán</option>
+                                    <option value="Cholula-Puebla">Cholula-Puebla</option>
+                                    <option value="Taxco-Cuernavaca">Taxco-Cuernavaca</option>
+                                    <option value="Garibaldi Nocturno">Garibaldi Nocturno</option>
+                                    <option value="Tour Luchas">Tour Luchas</option>
+                                    <option value="Piramides y Safari">Piramides y Safari</option>
                                     <option value="Grutas de Tolantongo">Grutas de Tolantongo</option>
                                 </select>
                             </li>
@@ -664,7 +648,7 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <!--<li><a href="index.html#parking-tab">Estacionamiento</a></li>-->
+                                    <li><a href="index.html#parking-tab">Estacionamiento</a></li>
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
