--- a/tours_prop.html
+++ b/tours_prop.html
@@ -55,12 +55,20 @@
     <!-- FontAwesomeKit -->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
+    <link rel="stylesheet" href="css/superfish.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="css/cs-select.css">
+    <link rel="stylesheet" href="css/cs-skin-border.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/mybtn_flot.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+    <script src="js/modernizr-2.6.2.min.js"></script>
     <style>
         .window_size {
             height: 95vh !important;
@@ -640,7 +648,7 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <!--<li><a href="index.html#parking-tab">Estacionamiento</a></li>-->
+                                    <li><a href="index.html#parking-tab">Estacionamiento</a></li>
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
