--- a/ng/tours.html
+++ b/ng/tours.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -356,6 +356,7 @@
                 <div class="row">
                     <div id="carouselExampleIndicators" class="carousel slide mx-auto" data-ride="carousel"
                          style="padding-top: 50px; max-width: 90%!important;">
+                         <!--
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -369,45 +370,46 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
                         </ol>
+                    -->
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_uno.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/01-tour.webp"
                                      alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_dos.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/02-tour.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_tres.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/03-tour.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_cuatro.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/04-tour.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_cinco.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/05-tour.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_seis.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/06-tour.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_siete.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/07-tour.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_ocho.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/08-tour.webp"
                                      alt="Third slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_nueve.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/09-tour.webp"
                                      alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_diez.png"
+                                <img class="d-block mx-auto mdp_img" src="../images/2024/tours/eng/10-tour.webp"
                                      alt="Third slide">
                             </div>
                         </div>
