--- a/restaurant.html
+++ b/restaurant.html
@@ -419,13 +419,14 @@
                     </div>
 
                     <!--Botón-->
+                    <!--
                     <div class="col-md-4 col-md-offset-2">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
                                 <p><a href="./files/menus2024/nuevo_menu2024-2.pdf" target="_blank"
                                       class="btn btn-primary btn-luxe-primary">Menú Restaurante<i
                                         class="ti-angle-right"></i></a></p>
-                                <!--<p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>-->
+                               <p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div>
@@ -438,6 +439,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
