Metadatos no funcionan

--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+<!------ modals ------->
+<!------ modals ------->
+<div class="modal fade" id="" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <small>
+          Reserva directamente y obtén descuentos exclusivos con la tarifa más baja. Descubre porqué Hotel Punto MX es el punto más cómodo de México.
+          Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, 
+          déjate consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir la mejor experiencia hospitalaria.
+        </small>
+      </div>
+    </div>
+  </div>
+</div>
+<!------ modals ------->
 <!------ modals ------->
 <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
