--- a/rooms.html
+++ b/rooms.html
@@ -93,35 +93,12 @@
      aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header" style="background-color: var(--color-primario);">
-                <h5 class="modal-title fontWhite cursiveFont" id="">Hotel Punto MX - Acerca de Nosotros</h5>
-            </div>
             <div class="modal-body fontHover">
                 <small>
-                    Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, déjate
-                    consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir
-                    la mejor experiencia hospitalaria.
-                    <br>
-                    Contamos con 60 lujosas y cómodas habitaciones; cada una de ellas con un toque especial.<br>
-                    Ya sea que tu viaje sea familiar, de amigos o negocios, PUNTO MX es un lugar maravilloso para hacer
-                    de tu experiencia en México algo único.
+                    Reserva online tu próximo hospedaje con precios bajos seguros y valores agregados. 
+                    Ven conoce nuestras habitaciones y descubre por qué Hotel Punto MX es el punto más cómodo de México.
+                    Hotel Punto MX, el punto más cómodo de México.
                 </small>
-                <ul class="banner_well">
-                    <li style="color: #0c5460!important;"><i class="fa-solid fa-drumstick-bite fontHover"
-                                                             style="color: #0c5460!important;"></i><small>Desayuno
-                        Buffete</small></li>
-                    <li style="color: #0c5460!important;"><i class="fa-solid fa-bed fontHover"
-                                                             style="color: #0c5460!important;"></i><small>Upgrade
-                        gratis</small></li>
-                    <li style="color: #0c5460!important;"><i class="fa-solid fa-hand-holding-dollar fontHover"
-                                                             style="color: #0c5460!important;"></i><small>Mejor
-                        precio</small></li>
-                </ul>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal"
-                        style="padding: 5px 15px!important; border-radius: 20px;">Cerrar
-                </button>
             </div>
         </div>
     </div>
@@ -337,18 +314,6 @@
         </div>
     </div>
 </div>
-<!-- Modal -->
-<div class="modal fade" id="modalReserv" tabindex="-1" aria-labelledby="modalLabelReserv" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body center-block align-items-center align-middle">
-                <img class='img-fluid' src='./images/september/reserva.jpeg'
-                     alt='Beneficios de reserva Hoteles Punto MX'/>
-            </div>
-        </div>
-    </div>
-</div>
-<!------------>
 <!------------>
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
@@ -416,7 +381,7 @@
         </div>
         <div class="tm-page-wrap mx-auto" style="margin-top: 30px;">
             <div class="row">
-                <div class="section-title text-center mb-2">
+                <div class="section-title text-center mb-2" style="z-index: initial;">
                     <h2>Habitaciones</h2>
                     <p class="fontHover px-5">Todas nuestras habitaciones están decoradas con un estilo moderno y
                         elegante. Incluyen
@@ -753,6 +718,7 @@
                 </section>
             </div>
         </div>
+        <!--
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
@@ -781,7 +747,6 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <!--<li><a href="index.html#parking-tab">Estacionamiento</a></li>-->
                                     <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
@@ -796,7 +761,6 @@
                                         class="fa-brands fa-facebook" style="color: #000;"></i></a>
                                 <a class="circle_element" href="https://www.instagram.com/hotelpuntomx/"
                                    target="_blank"><i class="fa-brands fa-instagram" style="color: #000;"></i></a>
-                                <!--<a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><span class="footer_esp_ta">--</span></a>-->
                                 <a class="circle_element"
                                    href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html"
                                    target="_blank">
@@ -823,6 +787,7 @@
                 </div>
             </div>
         </footer>
+    -->
     </div>
 </div>
 <!-- Javascripts -->
